fix border radius issue on iOS

--- a/client/src/components/FeedItem/FeedItem.module.css
+++ b/client/src/components/FeedItem/FeedItem.module.css
@@ -6,7 +6,7 @@
 	height: 180px;
 	overflow: hidden;
 	filter: grayscale(35%);
-	border-radius: 0;
+	border-radius: 3px 3px 0 0;
 	position: relative;
 	z-index: 2;
 }
